# HaskellMariaDB_MicroserviceExample

./: LICENSE  README.md
Checker/: Checker.cabal  Dockerfile  README.md
Checker/Resources/: micro-compose.yml
Checker/Src/: CommandLine.hs  Program.hs
Database/: Dockerfile  README.md
Database/sql-files/: Step01_createDatabase.sql  Step02_createUser.sql  Step03_createAndFillHealthcheck.sql
