cabal-version:       3.0
name:                Checker
version:             0.1.0.0
synopsis:            Minimal example to connect to a mariadb database using odbc

license:             MIT
author:              Leonhard Applis
maintainer:          Leonhard.Applis@Protonmail.com
category:            executable
extra-source-files:  README.md

executable Checker
  main-is:            Program.hs
  other-modules:      CommandLine
  build-depends:       
                  base                  >= 4.13.0 && < 4.14,
                  text                  >= 1.2.4 && < 1.3,
                  HDBC                  >= 2.4.0.3 && <2.5,
                  HDBC-odbc             >= 2.6.0.0 && <2.7,
                  bytestring            == 0.10.10.0,
                  groupBy               == 0.1.0.0,
                  optparse-applicative == 0.15.1.0
  ghc-options:
    -O2

  default-language:    Haskell2010
  hs-source-dirs:      Src
  build-depends:       time
